--- a/Theme_Group_5/Fanta.theme.css
+++ b/Theme_Group_5/Fanta.theme.css
@@ -620,6 +620,9 @@
 .theme-dark .reaction-1ELvT8.reactionMe-23mbRf .reactionCount-2ddRoS {
     color: white;
 }
+.buttonContainer-KtQ8wc>* {
+    z-index: 1;
+}
 .theme-dark .markup-2BOw-j {
    left: 4px;
    position: relative;
