--- a/Theme_Group_1/Thunderstorm.theme.css
+++ b/Theme_Group_1/Thunderstorm.theme.css
@@ -1,6 +1,6 @@
 //META{"name":"Thunderstorm_Theme","description":"Severe Weather is coming your way","author":"DevilsTheAvenged","version":"1"}*//{}
 .app {
-	background-image: url("https://u.imageresize.org/2c66d9ce-510c-4b15-a159-ca1412c299be.jpeg");
+	background-image: url("https://images7.alphacoders.com/807/807537.jpg");
    background-size: cover !important;
 	background-position: center !important;
 }
@@ -982,7 +982,7 @@ a {
 .private-channel-recipients-invite .error-state.not-friends .btn:hover {
     border: 1px solid rgba(255,255,255,0.34);
 }
-.searchBar-2pE3BB .search-bar{
+.searchBar-2pE3BB .search-bar {
     background-color: black;
 }
 
@@ -1038,14 +1038,14 @@ a {
     color: #fff;
     opacity: .7;
 }
-.private-channels .channel.selected a {
+.channel-2QD9_O.selected-1HYmZZ a {
     background-color: rgba(39, 39, 41,.6);
     color: #fff;
 }
 .private-channels .channel a {
     border-radius: 0px;
 }
-.private-channels .channel:hover a {
+.channel-2QD9_O:hover a {
     background-color: rgba(0, 0, 0,.4);
     border: 1px solid rgba(255,255,255,0.24);
 }
