--- a/Theme_Group_1/BokuNoHeroAcademia.theme.css
+++ b/Theme_Group_1/BokuNoHeroAcademia.theme.css
@@ -990,7 +990,8 @@ a {
 .private-channel-recipients-invite .error-state.not-friends .btn:hover {
     border: 1px solid rgba(255,255,255,0.34);
 }
-.searchBar-2pE3BB .search-bar{
+.searchBar-2pE3BB .search-bar,
+.search-bar {
     background-color: black;
 }
 
@@ -1046,14 +1047,14 @@ a {
     color: #fff;
     opacity: .7;
 }
-.private-channels .channel.selected a {
+.channel-2QD9_O.selected-1HYmZZ a {
     background-color: rgba(102, 139, 153,.6);
     color: #fff;
 }
 .private-channels .channel a {
     border-radius: 0px;
 }
-.private-channels .channel:hover a {
+.channel-2QD9_O:hover a {
     background-color: rgba(206, 105, 59,.6);
 }
 .privateChannels-1nO12o .channel-2fhmY8:hover .selectedLink-3dsNZ6 {
