--- a/Theme_Group_1/Danganronpa.theme.css
+++ b/Theme_Group_1/Danganronpa.theme.css
@@ -988,7 +988,8 @@ a {
     border-color: black;
     background-color: #5088A3;
 }
-.searchBar-2pE3BB .search-bar{
+.searchBar-2pE3BB .search-bar,
+.search-bar {
     background-color: black;
 }
 
@@ -1044,14 +1045,14 @@ a {
     color: #fff;
     opacity: .7;
 }
-.private-channels .channel.selected a {
+.channel-2QD9_O.selected-1HYmZZ a {
     background-color: rgba(80, 136, 163,.6);
     color: #fff;
 }
 .private-channels .channel a {
     border-radius: 0px;
 }
-.private-channels .channel:hover a {
+.channel-2QD9_O:hover a {
     background-color: rgba(142, 194, 194,.6);
 }
 .privateChannels-1nO12o .channel-2fhmY8:hover .selectedLink-3dsNZ6 {
