--- a/Theme_Group_3/BrownMaterial.theme.css
+++ b/Theme_Group_3/BrownMaterial.theme.css
@@ -967,23 +967,23 @@ a,
     border-color: transparent;
 }
 /* Need Help Menu */
-.need-help-modal.deprecated .header {
+.need-help-modal.form.deprecated .header {
     background-color: black;
     border-radius: 0px;
 }
 .form-deprecated .form-inner, .form.deprecated .form-inner {
     background-color: #212121;
 }
-.need-help-modal.deprecated .footer {
+.need-help-modal.form.deprecated .footer {
     background-color: black;
     border-radius: 0px;
     border-top: none;
     color: white;
 }
-.need-help-modal.deprecated .header input[type=text]:focus {
+.need-help-modal.form.deprecated .header input[type=text]:focus {
     border-bottom: none;
 }
-.need-help-modal.deprecated .header input[type=text] {
+.need-help-modal.form.deprecated .header input[type=text] {
     background-color: black;
     box-shadow: none;
     color: white;
@@ -1282,11 +1282,11 @@ a,
     background-color: #161719;
     color: #fff;
 }
-.private-channels .channel.selected a {
+.channel-2QD9_O.selected-1HYmZZ a {
     background-color: #3E2723 !important;
     color: #fff;
 }
-.private-channels .channel:hover a {
+.channel-2QD9_O:hover a {
     background-color: #212121;
     color: #fff;
 }
