--- a/Theme_Group_5/Fanta.theme.css
+++ b/Theme_Group_5/Fanta.theme.css
@@ -182,7 +182,7 @@
 .theme-dark .searchFilter-2ESiM3 {
     background-color: #F99500;
 }
-.theme-dark .search .search-bar {
+.theme-dark .search-bar {
     background-color: rgba(249, 149, 0, 0.4);
 }
 /* ---------- */
@@ -1072,7 +1072,7 @@ a,
 }
 .side-8zPYf6 .itemSelected-1qLhcL,
 .theme-dark #bd-settings-sidebar .ui-tab-bar-item.selected {
-    background-color: #B6A37C;
+    background-color: #6EC13A;
     color: #fff;
     border-radius: 0;
 }
@@ -1338,10 +1338,10 @@ a,
     box-shadow: 0 0 6px black, 0 0 6px black, 0 0 6px black;
     border-radius: 0;
 }
-.private-channels .channel.selected a {
+.channel-2QD9_O.selected-1HYmZZ a {
     background-color: rgba(249, 149, 0,.8);
 }
-.private-channels .channel:hover a{
+.channel-2QD9_O:hover a{
     background-color: rgba(249, 149, 0,.5);
 }
 .privateChannels-1nO12o .channel-2fhmY8:hover .selectedLink-3dsNZ6 {
