--- a/Theme_Group_5/Gumi.theme.css
+++ b/Theme_Group_5/Gumi.theme.css
@@ -183,7 +183,7 @@
 .theme-dark .searchFilter-2ESiM3 {
     background-color: #8EA54B;
 }
-.theme-dark .search .search-bar {
+.theme-dark .search-bar {
     background-color: rgba(142, 165, 75, 0.4);
 }
 /* ---------- */
@@ -1070,7 +1070,7 @@ a,
 }
 .side-8zPYf6 .itemSelected-1qLhcL,
 .theme-dark #bd-settings-sidebar .ui-tab-bar-item.selected {
-    background-color: #B6A37C;
+    background-color: #96e837;
     color: #fff;
     border-radius: 0;
 }
@@ -1336,10 +1336,10 @@ a,
     box-shadow: 0 0 6px black, 0 0 6px black, 0 0 6px black;
     border-radius: 0;
 }
-.private-channels .channel.selected a {
+.channel-2QD9_O.selected-1HYmZZ a {
     background-color: rgba(142, 165, 75,.8);
 }
-.private-channels .channel:hover a{
+.channel-2QD9_O:hover a{
     background-color: rgba(142, 165, 75,.5);
 }
 .privateChannels-1nO12o .channel-2fhmY8:hover .selectedLink-3dsNZ6 {
