--- a/Theme_Group_5/KemonoFriends.theme.css
+++ b/Theme_Group_5/KemonoFriends.theme.css
@@ -182,7 +182,7 @@
 .theme-dark .searchFilter-2ESiM3 {
     background-color: #174C3E;
 }
-.theme-dark .search .search-bar {
+.theme-dark .search-bar {
     background-color: rgba(23,76,62, 0.4);
 }
 /* ---------- */
@@ -1342,10 +1342,10 @@ a,
     box-shadow: 0 0 6px black, 0 0 6px black, 0 0 6px black;
     border-radius: 0;
 }
-.private-channels .channel.selected a {
+.channel-2QD9_O.selected-1HYmZZ a {
     background-color: rgba(23,76,62,.8);
 }
-.private-channels .channel:hover a{
+.channel-2QD9_O:hover a{
     background-color: rgba(23,76,62,.5);
 }
 .privateChannels-1nO12o .channel-2fhmY8:hover .selectedLink-3dsNZ6 {
