--- a/Theme_Group_5/KittyCat.theme.css
+++ b/Theme_Group_5/KittyCat.theme.css
@@ -183,7 +183,7 @@
 .theme-dark .searchFilter-2ESiM3 {
     background-color: #5e4a9c;
 }
-.theme-dark .search .search-bar {
+.theme-dark .search-bar {
     background-color: rgba(94, 74, 156, 0.4);
 }
 /* --------- */
@@ -1340,10 +1340,10 @@ a,
     box-shadow: 0 0 6px black, 0 0 6px black, 0 0 6px black;
     border-radius: 0;
 }
-.private-channels .channel.selected a {
+.channel-2QD9_O.selected-1HYmZZ a {
     background-color: rgba(94, 74, 156,.8);
 }
-.private-channels .channel:hover a{
+.channel-2QD9_O:hover a{
     background-color: rgba(94, 74, 156,.5);
 }
 .privateChannels-1nO12o .channel-2fhmY8:hover .selectedLink-3dsNZ6 {
