--- a/Theme_Group_1/BokuNoHeroAcademia.theme.css
+++ b/Theme_Group_1/BokuNoHeroAcademia.theme.css
@@ -1057,7 +1057,7 @@ a {
 .channel-2QD9_O:hover a {
     background-color: rgba(206, 105, 59,.6);
 }
-.privateChannels-1nO12o .channel-2fhmY8:hover .selectedLink-3dsNZ6 {
+.privateChannels-1nO12o .channel-2fhmY8:hover .channel-2QD9_O.selected-1HYmZZ a {
     background-color: rgba(206, 105, 59,.8);
 }
 /* Friends and DMs */
