--- a/Theme_Group_1/Thunderstorm.theme.css
+++ b/Theme_Group_1/Thunderstorm.theme.css
@@ -1049,7 +1049,7 @@ a {
     background-color: rgba(0, 0, 0,.4);
     border: 1px solid rgba(255,255,255,0.24);
 }
-.privateChannels-1nO12o .channel-2fhmY8:hover .selectedLink-3dsNZ6 {
+.privateChannels-1nO12o .channel-2fhmY8:hover .channel-2QD9_O.selected-1HYmZZ a {
     background-color: rgba(0, 0, 0,.7);
 }
 /* Friends and DMs */
