--- a/Theme_Group_5/Fanta.theme.css
+++ b/Theme_Group_5/Fanta.theme.css
@@ -1344,7 +1344,7 @@ a,
 .channel-2QD9_O:hover a{
     background-color: rgba(249, 149, 0,.5);
 }
-.privateChannels-1nO12o .channel-2fhmY8:hover .selectedLink-3dsNZ6 {
+.privateChannels-1nO12o .channel-2fhmY8:hover .channel-2QD9_O.selected-1HYmZZ a {
     background-color: rgba(249, 149, 0,.7);
 }
 .private-channels header,
