--- a/Theme_Group_5/KemonoFriends.theme.css
+++ b/Theme_Group_5/KemonoFriends.theme.css
@@ -1348,7 +1348,7 @@ a,
 .channel-2QD9_O:hover a{
     background-color: rgba(23,76,62,.5);
 }
-.privateChannels-1nO12o .channel-2fhmY8:hover .selectedLink-3dsNZ6 {
+.privateChannels-1nO12o .channel-2fhmY8:hover .channel-2QD9_O.selected-1HYmZZ a {
     background-color: rgba(23,76,62,.7);
 }
 .private-channels header,
