--- a/Theme_Group_5/KittyCat.theme.css
+++ b/Theme_Group_5/KittyCat.theme.css
@@ -1346,7 +1346,7 @@ a,
 .channel-2QD9_O:hover a{
     background-color: rgba(94, 74, 156,.5);
 }
-.privateChannels-1nO12o .channel-2fhmY8:hover .selectedLink-3dsNZ6 {
+.privateChannels-1nO12o .channel-2fhmY8:hover .channel-2QD9_O.selected-1HYmZZ a {
     background-color: rgba(94, 74, 156,.7);
 }
 .private-channels header,
