--- a/Theme_Group_1/Bubble.theme.css
+++ b/Theme_Group_1/Bubble.theme.css
@@ -345,10 +345,14 @@
     background-color: #E7FEFF;
     color: black;
 }
-.theme-dark .divider-3gKybi:not(.red-1YQ4s7) div {
-    background-color: transparent;
+
+
+.theme-dark .divider-3gKybi.dividerRed-MKoLlr .dividerContent-2L12VI:after, .theme-dark .divider-3gKybi.dividerRed-MKoLlr .dividerContent-2L12VI:before,
+.theme-dark .divider-3gKybi:not(.dividerRed-MKoLlr) .dividerContent-2L12VI:after, .theme-dark .divider-3gKybi:not(.dividerRed-MKoLlr) .dividerContent-2L12VI:before {
+   border-color: transparent;
 }
-.theme-dark .divider-3gKybi:not(.red-1YQ4s7) span {
+
+.theme-dark .divider-3gKybi.dividerRed-MKoLlr .dividerContent-2L12VI, .theme-dark .divider-3gKybi:not(.dividerRed-MKoLlr) .dividerContent-2L12VI {
     color: white;
     background: transparent;
     padding: 4px 65px;
@@ -822,7 +826,7 @@ a {
     box-shadow: inset 0 0 7px rgba(0,0,0,0.3);
 }
 /* Search Popout */
-.theme-dark .searchPopout-1vUlP3 {
+.theme-dark .container-3ayLPN {
     background-color: transparent !important;
     border: none;
     box-shadow: inset 5px 7px 7px rgba(255,255,255,0.6);
@@ -837,7 +841,7 @@ a {
     border-radius: 30px;
     box-shadow: inset 5px 7px 7px rgba(255,255,255,0.6);
 }
-.theme-dark .option-96V44q.selected-rZcOL-:before,
+.theme-dark .option-96V44q:after, .theme-dark .option-96V44q.selected-rZcOL-:before, 
 .theme-dark .option-96V44q.selected-rZcOL-:after {
     background: transparent;
 }
@@ -1542,9 +1546,9 @@ a {
     color: white;
 }
 /* Emote Menu */
-.bda-dark #bda-qem-favourite-container, 
-.bda-dark #bda-qem-twitch-container, 
-.bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
+#bda-qem-favourite-container, 
+#bda-qem-twitch-container, 
+.emoji-picker, .emojiPicker-3m1S-j {
     background-color: transparent;
     border-radius: 4px;
     border: none;
@@ -1555,10 +1559,11 @@ a {
     border: none;
     box-shadow: inset 7px 4px 9px rgba(255,255,255,0.46), inset 0 0 123px rgba(255,255,255,0.43);
 }
+
 .emojiPicker-3m1S-j .header-1nkwgG {
     border-bottom: none;
 }
-.bda-dark .emoji-picker .category, .bda-dark .emojiPicker-3m1S-j .category-2U57w6 {
+.emoji-picker .category, .emojiPicker-3m1S-j .category-2U57w6 {
     background-color: transparent;
     color: black;
     box-shadow: inset 7px 4px 9px rgba(255,255,255,0.46), inset 0 0 123px rgba(255,255,255,0.43);
@@ -1566,32 +1571,18 @@ a {
 .emojiPicker-3m1S-j .stickyHeader-1SS0JU {
     background: transparent;
 }
-.bda-dark .emojiPicker-3m1S-j .header-1nkwgG .search-bar {
+.emojiPicker-3m1S-j .header-1nkwgG .search-bar {
     background-color: transparent;
 }
-.bda-dark .emoji-picker .dimmer.visible, 
-.bda-dark .emojiPicker-3m1S-j .dimmer-3iH-5D.visible-3k45bQ  {
+.emoji-picker .dimmer.visible, 
+.emojiPicker-3m1S-j .dimmer-3iH-5D.visible-3k45bQ  {
     background-color: rgba(0,0,0,0.65);
 }
-.bda-dark .emojiPicker-3m1S-j .diversitySelector-tmmMv0 .popout-2nUePc {
+.diversitySelector-tmmMv0 .popout-2nUePc {
     background: black;
     border-color: transparent;
 }
-.bda-dark .emoji-picker .scroller::-webkit-scrollbar, 
-.bda-dark .emoji-picker .scroller::-webkit-scrollbar-track,
-.bda-dark .emoji-picker .scroller::-webkit-scrollbar-track-piece, 
-.bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar, 
-.bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track, 
-.bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track-piece,
-.bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar, 
-.bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar-track, 
-.bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar-track-piece, 
-.bda-dark #pubs-container .scroller::-webkit-scrollbar, 
-.bda-dark #pubs-container .scroller::-webkit-scrollbar-track, 
-.bda-dark #pubs-container .scroller::-webkit-scrollbar-track-piece,
-.bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar, 
-.bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar-track, 
-.bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar-track-piece {
+.scrollerThemed-2oenus.themeLight-1_DWyY.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-dark .scrollerThemed-2oenus.themeLight-1_DWyY.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-light .scrollerWrap-2lJEkd.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track {
     background-color: transparent !important;
     border-color: transparent !important;
 }
@@ -1605,11 +1596,11 @@ a {
 .emojiPicker-3m1S-j .categories-1feg4n .item-16cXuq.selected-39BZ4S {
     border-bottom-color: #E7FEFF;
 }
-.bda-dark #bda-qem {
+#bda-qem {
     border-bottom: none !important;
     background: transparent;
 }
-.bda-dark #bda-qem button {
+#bda-qem button {
     background: rgba(231, 254, 255,0.5);
     border-left: none;
     box-shadow: none;
@@ -1617,11 +1608,11 @@ a {
     font-weight: bold;
     box-shadow: inset 7px 4px 9px rgba(255,255,255,0.46), inset 0 0 123px rgba(255,255,255,0.73);
 }
-.bda-dark #bda-qem button:hover {
+#bda-qem button:hover {
     background-color: rgba(231, 254, 255,0.8);
     box-shadow: inset 7px 4px 9px rgba(255,255,255,0.86), inset 0 0 123px rgba(255,255,255,0.93);
 }
-.bda-dark #bda-qem button.active {
+#bda-qem button.active {
     background-color:#E7FEFF;
     box-shadow: inset 0 0 15px white;
     box-shadow: inset 7px 4px 9px rgba(255,255,255,0.86), inset 0 0 123px rgba(255,255,255,0.93);
